# ObjectDetection

./: CMakeLists.txt  README.md
src/: Main.cpp
